# AdvancedLogger

./: CMakeLists.txt  LogReadMe.md  Logger.cpp  Logger.h  Logger.tpp  README.md  Readme.md  mian.cpp
